fixed spacing on proposal view and changed model of proposals to include medium text

--- a/public/css/proposalview.css
+++ b/public/css/proposalview.css
@@ -1,3 +1,7 @@
+.container {
+	white-space: pre-line;
+}
+
 .subtitle {
 	padding-top: 0px;
 	margin-top: 4px;
